--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "filament/forms": "^5.0",
         "filament/tables": "^5.0",
+        "laravel/ai": "^0.1.5",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^4.0"
